# Advent-of-Code-2022

./: .flake8  .pre-commit-config.yaml  pyproject.toml
advent_of_code_2022/: functions.py
advent_of_code_2022/01/: script_01.py
advent_of_code_2022/02/: script_02_v1.py  script_02_v2.py  script_02_v3.py  script_02_v4.py
advent_of_code_2022/03/: script_03.py
advent_of_code_2022/04/: script_04.py
advent_of_code_2022/05/: script_05.py
