[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = "Repo containing solutions to Advent of Code 2022."
authors = ["tjerk <tjerk@littlerocket.nl>"]

[tool.poetry.dependencies]
python = "~3.9"
spyder = "^5.3.0"
lr-data-library = {git = "git@gitlab.littlerocket.team:littlerocket/data-internal/LR-data-library.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
