[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = "Repo containing solutions to Advent of Code 2022."
authors = ["tjerk <tjerk@littlerocket.nl>"]

[tool.poetry.dependencies]
python = "~3.9"
spyder = "^5.3.0"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
